ajout condition au carousel -1 et debut fix collaps

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -1,10 +1,10 @@
 .collapse {
-    background-color: #F6F6F673;
+
     display: flex;
 
     flex-wrap: wrap;
     align-items: center;
-    max-width: fit-content;
+    max-width: 1240px;
 
     @media screen and (max-width: 568px) {
 
@@ -24,17 +24,23 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        z-index: 1;
     }
 
     .collapse_bascule {
+        width: 100%;
+        padding: 10px;
+        background-color: #F6F6F673;
         display: flex;
         flex-direction: column;
-        gap: 5px;
+        
         visibility: visible;
         opacity: 1;
-        padding: 10px;
+
         font-size: clamp(12px, 1.8vw, 18px);
         color: black;
+        transform: translateY(-20px);
+        z-index: 0;
     }
 
     .collapse_nonbascule {
@@ -54,6 +60,8 @@
 
     .text {
         font-weight: 100;
+display: flex;
+flex-direction: column;
 
     }
 }
