--- a/src/pages/location.scss
+++ b/src/pages/location.scss
@@ -123,16 +123,15 @@ margin: 0;
   
     display: flex;
     justify-content: space-between;
-       max-height: fit-content;
+
      .collapse{
         display: flex;
        
-        gap: 20px;
+    
         width: 100%;
         max-width: 45%;
         padding:0 ;
-        
-        background: #f5f5f5;
+
         border-radius: 10px;
         box-sizing: border-box;
         margin: 20px 0;
@@ -160,16 +159,7 @@ margin: 0;
                 height: 24px;
             }
         }
-        .collapse_content {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            p {
-                color: black;
-                font-size: 16px;
-                line-height: 142.6%;
-            }
-        }
+ 
       
      }
       
